Name:               pin
Version:            0.0.1
License:            BSD3
License-File:       LICENSE
Author:             Mark Hibberd <mark@hibberd.id.au>
Maintainer:         Mark Hibberd <mark@hibberd.id.au>
Copyright:          (c) 2012 Mark Hibberd
Synopsis:           Library for pin.net.au HTTP Api
Category:           Network APIs
Homepage:           https://github.com/apiengine/pin
Bug-reports:        https://github.com/apiengine/pin/issues
Cabal-Version:      >= 1.8
Build-Type:         Simple
Description:
  pin

Source-Repository   head
  Type:             git
  Location:         https://github.com/apiengine/pin.git

Flag                small_base
  Description:      Choose the new, split-up base package.

Library
  Build-Depends:
                    base                            >= 3          && < 5
                    , aeson                         >= 0.6
                    , attoparsec                    >= 0.10
                    , bytestring                    >= 0.9
                    , certificate                   >= 1.2
                    , containers                    >= 0.4
                    , failure                       >= 0.2
                    , http-conduit                  >= 1.4
                    , http-types                    >= 0.6
                    , network-api-support           >= 0.1
                    , resourcet                     >= 0.3
                    , text                          >= 0.11
                    , time                          >= 1.2
                    , timerep                       >= 1.0.3
                    , tls                           >= 0.9
                    , tls-extra                     >= 0.4
                    , transformers                  >= 0.2
                    , vector                        >= 0.9


  GHC-Options:
                    -Wall -fno-warn-orphans

  Hs-Source-Dirs:
                    src

  Exposed-Modules:
                    Pin
                    Pin.Core
                    Pin.Data
                    Pin.Defaults

